Refactor wordList class field interface from ArrayList<Word> to List<Word>. Same with instance fields: HashMap<Word, Word> previous -> Map<Word, Word> & LinkedList<Word> nextToVisit to List<Word>